# llmkit

./: LICENSE  README.md  pyproject.toml
llmkit/core/: aleph_alpha.py  embeddings.py  langchain.py  llms.py  memory.py  prompts.py
llmkit/core/Agents/: openai_conversational_retrieval_agent.py
llmkit/core/loaders/: context_awaresplitting.py  pdf_loaders.py  pymu_extender.py
llmkit/examples/: Aleph Alpha - machine moulding.ipynb  Streamlit + OpenAI + ConversationalRetrievalChain.ipynb  embeddings_comparison.py  openai_retrieval_agent_with_streamlit.py  streamlit_conversation_chain.py  streamlit_conversation_chain_german.py  streamlit_example.py
llmkit/examples/cities_example/: GPT 3.5 Basic Example.ipynb
llmkit/examples/embeddings/: InstructEmbeddings-ChromaDB  InstructEmbeddings-ChromaDB.ipynb
llmkit/examples/machine_manual/: LLM Toolkit - English Prompt + Conversation Summary Buffer Memory + ConversationalChain - llama2-13b - chat-german  LLM Toolkit - English Prompt + Conversation Summary Memory + ConversationalChain - llama2-13b - chat-german  LLM Toolkit - English Prompt + Sliding Window memory + ConversationalChain - llama2-13b - chat-german  LLM Toolkit - English Prompt + Vector Store Memory + ConversationalChain - llama2-13b - chat-german  LLM Toolkit - German Prompt + Conversation Summary Buffer Memory + ConversationalChain - llama2-13b - chat-german  (+2 more)
llmkit/examples/regio_manager_example/: Regio Manager Test.ipynb
llmkit/utils/: config.py  evaluation.py  monitoring.py  post_processing.py  preprocessing.py  retrievers.py  wikipidea.py
(+15 files in other folders)
